--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,62 +1,12 @@
-.container {
-  /*1140px also a standard subtract 32 px from both sides*/
-  max-width: 120rem;
-  /* auto gives the same value to the left and right side */
-  padding: 0 3.2rem;
-  margin: 0 auto;
-}
-
-.h1-header {
-  font-size: 6rem;
-  text-align: center;
-  color: #333;
-  background-color: #67e8f9;
-  height: 10rem;
-  padding: 3rem;
-}
-
-.h2-sub {
-  font-size: 4rem;
-  text-align: center;
-  background-color: #67e8f9;
-  padding: 2rem;
-  position: absolute;
-  top: 30rem;
-  left: 35rem;
-  width: 45rem;
-}
-
-.h2-about {
-  font-size: 4rem;
-  background-color: #bae6fd;
-  padding: 2rem;
-}
-
-.article-details {
-  display: grid;
-}
-
-.profile-img {
-  /* access image directly from css file */
-  background-image: url("../images/wood-panels.jpg");
-  /* background image covers the entire element */
-  background-size: cover;
-  background-position: center;
-  height: 40rem;
-}
-
-.section-profile {
-  position: relative;
-}
-
+/* styling for main naviation at the top of the page. */
 ul {
-  text-align: center;
+  text-align: right;
   color: #67e8f9;
-  background-color: #333;
   height: 8rem;
   padding: 5rem;
 }
 
+/* This is the styling for the lists of the main navigation at the top of the page */
 li {
   display: inline;
   list-style-type: none;
@@ -64,6 +14,7 @@ li {
   padding: 2rem;
 }
 
+/* This is the styling for the lists of the main navigation at the top of the page */
 li a {
   text-decoration: none;
   border-bottom: 0.5rem solid;
@@ -72,12 +23,365 @@ li a {
   margin: 0 -1rem;
 }
 
+/* There is a conflict with the links on the sight which is why !important is used to force them to work */
 li a:hover,
 li a:active {
-  color: #fff;
+  color: #fff !important;
 }
 
-a:link,
-a:visited {
+/* This is the styling for the lists of the main navigation at the top of the page */
+li a:link,
+li a:visited {
   color: #67e8f9;
+}
+
+/* This is the styling for the 'ME' in About Me and Contact Me to position it in the correct place */
+span {
+  display: block;
+  padding: 0.5rem;
+  font-size: 2rem;
+}
+
+/* This is the styling for the paragraphs in the About Me, Work and Contact Me sections */
+p {
+  padding: 2rem;
+}
+
+/* main container for about me, work and contact sections */
+.container {
+  max-width: 170rem;
+  /* auto gives the same value to the left and right side */
+  padding: 0 3.2rem;
+  margin: 0 auto;
+}
+
+/* main header with name, profile name and navigation */
+.main-header {
+  display: flex;
+  gap: 70rem;
+  background-color: #333;
+}
+
+/* h1 header with name at the top of the page left. */
+.h1-header {
+  font-size: 6rem;
+  text-align: center;
+  color: #333;
+  background-color: #67e8f9;
+  height: 8rem;
+  padding: 2rem;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+
+/* display the profile name and the background image */
+.section-profile {
+  top: 40rem;
+  margin-bottom: 5rem;
+}
+
+/* displays the avatar picture */
+.header-profile-img {
+  position: absolute;
+}
+
+/* profile container holds the name 'profile'. relative to allow name 'profile' to display on top of background image */
+.section-profile-container {
+  display: flex;
+  height: 40rem;
+  position: relative;
+}
+
+/* profile header containing name 'profile' made absolute to display on top of background image */
+.profile-heading {
+  position: absolute;
+  align-items: right;
+  font-size: 4rem;
+  text-align: center;
+  background-color: #67e8f9;
+  padding: 2rem;
+  top: 30rem;
+  left: 130rem;
+  width: 45rem;
+}
+
+/* name 'profile' displays on this background image */
+.section-profile-img {
+  /* access image directly from css file */
+  background-image: url("../images/wood-panels.jpg");
+  /* background image covers the entire element */
+  background-size: cover;
+  background-position: center;
+  height: 100%;
+  width: 100vw;
+}
+
+/* this is the grid for the container displaying the whole content from the about me upto and including the contact me section */
+.article-work {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(5, 1fr);
+  column-gap: 2rem;
+  row-gap: 2rem;
+}
+
+/* section about me with padding and justification right fincluding border rom about me text */
+.section-about {
+  /* display: flex; */
+  border-right: 1rem solid #1b5e81e8;
+  margin-right: 4rem;
+}
+
+/* This is the style about me section haeading which is also used for the work and contact headings */
+.about-heading {
+  font-size: 6rem;
+  text-align: right;
+  padding: 0 2rem 0 2rem;
+}
+
+/* this is the section about me style for that heading */
+.section-about-me {
+  font-size: 6rem;
+  text-align: right;
+}
+
+/* This is the section about me style for the text */
+.section-about-text {
+  font-size: 2rem;
+  grid-column: 2 / span 3;
+  grid-row: 1/2;
+  align-content: start;
+}
+
+/* section work done with padding incuding border between background image */
+.section-work {
+  border-right: 1rem solid #1b5e81e8;
+  /* spans 4 rows */
+  grid-row: 2 / 5;
+  margin-right: 4rem;
+}
+
+/* This is the recent work which is the first image which is the largest. It places the image and text in a specific cell in the grid*/
+.section-recent {
+  position: relative;
+  grid-column: 2 / span end;
+  grid-row: 2/3;
+  border: 0.5rem solid #67e8f9;
+}
+
+/* This is the background image for the recent work section */
+.section-recent-img {
+  /* access image directly from css file */
+  background-image: linear-gradient(
+      to right bottom,
+      rgba(103, 232, 249, 0.479),
+      rgba(103, 232, 249, 0.295)
+    ),
+    url("../images/abstract.jpg");
+  /*backgroundimagecoverstheentireelement*/
+  background-size: cover;
+  background-position: center;
+  height: 100%;
+  max-width: 100%;
+}
+
+/* This is the text on the background image for the recent work section */
+.section-recent-main-text {
+  background-color: #67e8f9;
+  position: absolute;
+  font-size: 3rem;
+  font-weight: 500;
+  padding: 2rem;
+  top: 70%;
+  left: 3rem;
+}
+
+/* This is the first previous work section which places it in a precise cell in the grid */
+.section-previous-first {
+  grid-column: 2/3;
+  grid-row: 3/4;
+  position: relative;
+  border: 0.5rem solid #67e8f9;
+}
+
+/* This is the first previous work section background image */
+
+.section-previous-first-img {
+  /* access image directly from css file */
+  background-image: linear-gradient(
+      to right bottom,
+      rgba(103, 232, 249, 0.479),
+      rgba(103, 232, 249, 0.295)
+    ),
+    url("../images/bubble.jpg");
+  /*backgroundimagecoverstheentireelement*/
+  background-size: cover;
+  background-position: center;
+  height: 100%;
+  max-width: 100%;
+}
+
+/* This is the first previous work text on the background image */
+.section-previous-first-text {
+  background-color: #67e8f9;
+  position: absolute;
+  font-size: 3rem;
+  font-weight: 500;
+  padding: 2rem;
+  top: 70%;
+  left: 3rem;
+}
+
+/* This is the second previous work section which places it in a precise cell in the grid */
+
+.section-previous-second {
+  grid-column: 3 / end;
+  grid-row: 3/4;
+  position: relative;
+  border: 0.5rem solid #67e8f9;
+}
+
+/* This is the second previous work section background image */
+.section-previous-second-img {
+  /* access image directly from css file */
+  background-image: linear-gradient(
+      to right bottom,
+      rgba(103, 232, 249, 0.479),
+      rgba(103, 232, 249, 0.295)
+    ),
+    url("../images/feathers.jpg");
+  /*backgroundimagecoverstheentireelement*/
+  background-size: cover;
+  background-position: center;
+  height: 100%;
+  max-width: 100%;
+}
+
+/* This is the second  previous work text on the background image */
+.section-previous-second-text {
+  background-color: #67e8f9;
+  position: absolute;
+  font-size: 3rem;
+  font-weight: 500;
+  padding: 2rem;
+  top: 70%;
+  left: 3rem;
+}
+
+/* This is the third previous work text on the background image */
+.section-previous-third {
+  grid-column: 2/3;
+  grid-row: 4/4;
+  position: relative;
+  border: 0.5rem solid #67e8f9;
+}
+
+/* This is the third previous work section background image */
+.section-previous-third-img {
+  /* access image directly from css file */
+  background-image: linear-gradient(
+      to right bottom,
+      rgba(103, 232, 249, 0.479),
+      rgba(103, 232, 249, 0.295)
+    ),
+    url("../images/country.jpg");
+  /*backgroundimagecoverstheentireelement*/
+  background-size: cover;
+  background-position: center;
+  height: 100%;
+  max-width: 100%;
+}
+
+/* This is the third  previous work text on the background image */
+.section-previous-third-text {
+  background-color: #67e8f9;
+  position: absolute;
+  font-size: 3rem;
+  font-weight: 500;
+  padding: 2rem;
+  top: 70%;
+  left: 3rem;
+}
+
+/* This is the fourth previous work text on the background image */
+.section-previous-fourth {
+  grid-column: 3 / end;
+  grid-row: 4/4;
+  position: relative;
+  border: 0.5rem solid #67e8f9;
+}
+
+/* This is the fourth previous work section background image */
+.section-previous-fourth-img {
+  /* access image directly from css file */
+  background-image: linear-gradient(
+      to right bottom,
+      rgba(103, 232, 249, 0.479),
+      rgba(103, 232, 249, 0.295)
+    ),
+    url("../images/sea.jpg");
+  /*backgroundimagecoverstheentireelement*/
+  background-size: cover;
+  background-position: center;
+  height: 100%;
+  max-width: 100%;
+}
+
+/* This is the fourth  previous work text on the background image */
+.section-previous-fourth-text {
+  background-color: #67e8f9;
+  position: absolute;
+  font-size: 3rem;
+  font-weight: 500;
+  padding: 2rem;
+  top: 70%;
+  left: 3rem;
+}
+
+/* this is the contact details styling for the unordered list element */
+.section-contact-ul {
+  background-color: #cffafe;
+  /* set padding to zero as it is being inherited from the ul styling above. */
+  padding: 0rem;
+}
+
+/* This is the display for the lists of the unordered list for the contact section*/
+.section-contact-li {
+  display: inline;
+  list-style-type: none;
+}
+
+/* This is the main styling for the li lists for the contact section */
+.section-contact-li a {
+  text-decoration: none;
+  border-bottom: 0.5rem solid;
+  padding: 1rem;
+  margin: 0 -1rem;
+  color: #333;
+}
+
+/* There is a conflict with the links on the sight which is why !important is used to force them to work */
+.section-contact-li a:hover,
+.section-contact-li a:active {
+  color: #67e8f9 !important;
+}
+
+.section-contact-li a:link,
+.section-contact-li a:visited {
+  color: #333;
+}
+
+/* footer links placed into grid row 5 and spans cell 2 to 3 */
+/* this applies to the links in the footer. */
+.footer {
+  grid-column: 2 / -1;
+  grid-row: 5/5;
+  margin-top: 7rem;
+}
+
+/* styling for contact section in footer */
+.section-footer-contact {
+  border-right: 1rem solid #1b5e81e8;
+  margin-right: 4rem;
+  height: 20rem;
 }
