--- a/assets/css/queries.css
+++ b/assets/css/queries.css
@@ -10,210 +10,203 @@
 }
 
 /*************************************/
-/* BELOW 1608px(Desktops) breakpoint divide by 16px browser standard*/
+/* BELOW 1610px(Desktops) breakpoint divide by 16px browser standard*/
 /*************************************/
-@media screen and (max-width: 110em) {
+@media screen and (max-width: 100em) {
   /* main header with name, profile name and navigation */
-  .main-header {
-    gap: 60rem;
+  .top-nav {
+    padding-top: 0rem;
+    height: 16rem;
+    /* flex-direction: column; */
+    flex-wrap: nowrap;
   }
 
-  /*  move profile heading in */
-  .profile-heading {
-    align-items: left;
-    left: 120rem;
+  .section-about {
+    font-size: 3rem;
   }
 
-  .header-profile-img img {
-    max-width: 80%;
-    height: 80%;
-  }
-}
-
-/*************************************/
-/* BELOW 1521px(Desktops) breakpoint divide by 16px browser standard*/
-/*************************************/
-@media screen and (max-width: 95em) {
-  /* move h1-header and resize on page */
-
-  /* main header with name, profile name and navigation */
-  .main-header {
-    gap: 40rem;
+  .section-about-me {
+    font-size: 3rem;
   }
 
-  /*  move profile heading in */
-  .profile-heading {
-    align-items: left;
-    left: 100rem;
-  }
-
-  .header-profile-img img {
-    max-width: 60%;
-    height: 60%;
-  }
-
-  .section-profile-img {
-    height: 100%;
-    width: 100%;
-  }
-
-  /* section work done with padding incuding border between background image */
-  .section-work {
-    /* spans 7 rows */
-    grid-row: 2 / 7;
-  }
-
-  .article-work {
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(7, 1fr);
+  .sub-heading {
+    font-size: 3rem;
   }
 
   /* This is the text on the background image for the recent work section */
   .section-recent-main-text {
-    top: 80%;
+    font-size: 2rem;
+    padding: 0.2rem;
+    left: 2rem;
+    top: 30%;
   }
   /* This is the first previous work text on the background image */
   .section-previous-first-text {
-    top: 80%;
-  }
-
-  /* This is the second previous work section which places it in a precise cell in the grid */
-  .section-previous-second {
-    grid-column: 2/3;
-    grid-row: 4/6;
-    position: relative;
-    border: 0.5rem solid #67e8f9;
+    font-size: 2rem;
+    padding: 0.2rem;
+    left: 2rem;
+    top: 60%;
   }
 
   /* This is the second  previous work text on the background image */
   .section-previous-second-text {
-    top: 40%;
-    z-index: 9999;
+    font-size: 2rem;
+    padding: 0.2rem;
+    top: 20%;
   }
 
-  /* This is the third previous work text on the background image */
-  .section-previous-third {
-    grid-column: 2/3;
-    grid-row: 5/6;
-    position: relative;
-    border: 0.5rem solid #67e8f9;
-  }
   /* This is the third  previous work text on the background image */
   .section-previous-third-text {
-    top: 40%;
-  }
-
-  /* This is the fourth previous work text on the background image */
-  .section-previous-fourth {
-    grid-column: 2/3;
-    grid-row: 6/7;
-    position: relative;
-    border: 0.5rem solid #67e8f9;
+    font-size: 2rem;
+    padding: 0.2rem;
+    left: 2rem;
+    top: 60%;
   }
 
   /* This is the fourth  previous work text on the background image */
   .section-previous-fourth-text {
+    font-size: 2rem;
+    padding: 0.2rem;
+    top: 20%;
+  }
+}
+
+/*************************************/
+/* BELOW 700px(small tablets) breakpoint divide by 16px browser standard*/
+/*************************************/
+@media screen and (max-width: 45em) {
+  /* .section-about-me {
+    font-size: 1.5rem;
+  }
+
+  .sub-heading {
+    font-size: 1.5rem;
+  } */
+  /* main header with name, profile name and navigation */
+  .top-nav {
+    flex-wrap: nowrap;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+  }
+
+  .section-about-text {
+    font-size: 2rem;
+    grid-column: 2;
+    grid-row: 1;
+    align-content: start;
+  }
+
+  /* section work done with padding incuding border between background image */
+  .section-work {
+    border-right: 1rem solid #1b5e81e8;
+    /* spans 4 rows */
+    grid-row: 2 / 7;
+    margin-right: 4rem;
+  }
+
+  .article-work {
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto auto auto auto auto auto auto;
+  }
+
+  /* This is the text on the background image for the recent work section */
+  .section-recent {
+    grid-column: 2 / span 3;
+    grid-row: 2/3;
+  }
+
+  /* This is the text on the background image for the recent work section */
+  .section-recent-main-text {
+    font-size: 2rem;
+    padding: 0.2rem;
+    left: 2rem;
     top: 40%;
+  }
+
+  /* This is the first previous work text on the background image */
+  .section-previous-first {
+    grid-column: 2 / span 3;
+    grid-row: 3/4;
+  }
+
+  /* This is the first previous work text on the background image */
+  .section-previous-first-text {
+    font-size: 2rem;
+    padding: 0.2rem;
+    left: 2rem;
+    top: 70%;
+  }
+
+  /* This is the second  previous work text on the background image */
+  .section-previous-second {
+    grid-column: 2 / span 3;
+    grid-row: 4/5;
+  }
+
+  /* This is the second  previous work text on the background image */
+  .section-previous-second-text {
+    font-size: 2rem;
+    padding: 0.2rem;
+    top: 60%;
+  }
+
+  /* This is the third  previous work text on the background image */
+  .section-previous-third {
+    grid-column: 2 / span 3;
+    grid-row: 5/6;
+  }
+
+  /* This is the third  previous work text on the background image */
+  .section-previous-third-text {
+    font-size: 2rem;
+    padding: 0.2rem;
+    left: 2rem;
+    top: 70%;
+  }
+
+  /* This is the fourth  previous work text on the background image */
+  .section-previous-fourth {
+    grid-column: 2 / span 3;
+    grid-row: 6/7;
+  }
+
+  /* This is the fourth  previous work text on the background image */
+  .section-previous-fourth-text {
+    font-size: 2rem;
+    padding: 0.2rem;
+    left: 1rem;
+    top: 55%;
+  }
+  .footer {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: auto;
+    /* grid-column: 2 / -1;
+  grid-row: 5/5;
+  margin-top: 7rem; */
   }
 
   /* styling for contact section in footer  title*/
   .section-footer-contact {
-    grid-column: 1/2;
-    grid-row: 7/7;
-    border-right: 1rem solid #1b5e81e8;
-    /* margin-right: 4rem; */
-    height: 20rem;
+    margin-right: 5.5rem;
   }
 
-  /* move footer hyperlinks into cell 2 */
-  .footer {
-    grid-column: 2/3;
-    grid-row: 7/7;
-  }
-
-  .section-contact-li a {
-    margin: 0 1rem;
-    color: #333;
-  }
-}
-
-/*************************************/
-/* BELOW 1450px(Desktops) breakpoint divide by 16px browser standard*/
-/*************************************/
-@media screen and (max-width: 92em) {
-  /* main header with name, profile name and navigation */
-  .main-header {
-    gap: 10rem;
-  }
-
-  /*  move profile heading in */
-  .profile-heading {
-    align-items: left;
-    left: 80rem;
-  }
-
+  /* this is the contact details styling for the unordered list element */
   .section-contact-ul {
     display: flex;
     flex-direction: column;
-    text-align: center;
-  }
-}
-
-/*************************************/
-/* BELOW 1176px(Desktops) breakpoint divide by 16px browser standard*/
-/*************************************/
-@media screen and (max-width: 72em) {
-  /* main header with name, profile name and navigation */
-  .main-header {
-    gap: 5rem;
+    background-color: #cffafe;
+    /* set padding to zero as it is being inherited from the ul styling above. */
+    font-size: 1.5rem;
+    /* margin: 0 auto; */
+    margin-top: 0rem;
+    line-height: 2rem; */
   }
 
-  /* h1 header with name at the top of the page left. */
-  .h1-header {
-    font-size: 4rem;
-    height: 8rem;
-  }
-
-  .nav-ul {
-    font-size: 4rem;
-  }
-
-  /*  move profile heading in */
-  .profile-heading {
-    align-items: left;
-    left: 60rem;
-  }
-}
-
-/*************************************/
-/* BELOW 955px(Desktops) breakpoint divide by 16px browser standard*/
-/*************************************/
-/* h1 header with name at the top of the page left. */
-
-@media screen and (max-width: 60em) {
-  .h1-header {
-    font-size: 4rem;
-    height: 10rem;
-  }
-
-  .nav-ul {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(2, 1fr);
-    font-size: 2rem;
-    padding: 0rem;
-    gap: 0.3rem;
-  }
-
-  /*  move profile heading in */
-  .profile-heading {
-    align-items: left;
-    left: 10rem;
-    font-size: 4rem;
-  }
-
-  .header-profile-img img {
-    max-width: 25%;
-    height: 25%;
+  /* This is the display for the lists of the unordered list for the contact section*/
+  .section-contact-li {
+    list-style-type: none;
+    /* line-height: 3rem; */
+    padding: 1rem;
   }
 }
