--- a/assets/css/temp.css
+++ b/assets/css/temp.css
@@ -1,3 +1,40 @@
+/* styling for main naviation at the top of the page. */
+ul {
+  text-align: right;
+  color: #67e8f9;
+  height: 8rem;
+  padding: 5rem;
+}
+
+/* This is the styling for the lists of the main navigation at the top of the page */
+li {
+  display: inline;
+  list-style-type: none;
+  font-size: 3rem;
+  padding: 2rem;
+}
+
+/* This is the styling for the lists of the main navigation at the top of the page */
+li a {
+  text-decoration: none;
+  border-bottom: 0.5rem solid;
+  /* increase underline of anchor tag */
+  padding: 1rem;
+  margin: 0 -1rem;
+}
+
+/* There is a conflict with the links on the sight which is why !important is used to force them to work */
+li a:hover,
+li a:active {
+  color: #fff !important;
+}
+
+/* This is the styling for the lists of the main navigation at the top of the page */
+li a:link,
+li a:visited {
+  color: #67e8f9;
+}
+
 /* This is the styling for the 'ME' in About Me and Contact Me to position it in the correct place */
 span {
   display: block;
@@ -10,13 +47,19 @@ p {
   padding: 2rem;
 }
 
+/* main container for about me, work and contact sections */
+.container {
+  max-width: 170%;
+  /* auto gives the same value to the left and right side */
+  padding: 0 3.2rem;
+  margin: 0 auto;
+}
+
 /* main header with name, profile name and navigation */
 .main-header {
   display: flex;
-  flex-wrap: wrap;
   /* gap: 70rem; */
   background-color: #333;
-  width: 100vw;
 }
 
 /* h1 header with name at the top of the page left. */
@@ -30,81 +73,32 @@ p {
   margin-top: 2rem;
   margin-bottom: 2rem;
 }
-.main-nav {
-  width: 78vw;
-}
 
-/* styling for main naviation at the top of the page. */
-.top-nav {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: flex-end;
-  /* text-align: right; */
-  color: #67e8f9;
-  height: 8rem;
-  padding-top: 5rem;
-}
-
-/* This is the styling for the lists of the main navigation at the top of the page */
-.top-nav-list {
-  list-style-type: none;
-  font-size: 3rem;
-  padding: 2rem;
-}
-
-/* This is the styling for the lists of the main navigation at the top of the page */
-.top-nav-list a {
-  text-decoration: none;
-  border-bottom: 0.5rem solid;
-  /* increase underline of anchor tag */
-  padding: 1rem;
-  margin: 0 -1rem;
-}
-
-/* There is a conflict with the links on the sight which is why !important is used to force them to work */
-.top-nav-list a:hover,
-.top-nav-list a:active {
-  color: #fff !important;
-}
-
-/* This is the styling for the lists of the main navigation at the top of the page */
-.top-nav-list a:link,
-.top-nav-list a:visited {
-  color: #67e8f9;
-}
-
-/* main container for about me, work and contact sections */
-.container {
-  max-width: 100vw;
-  /* auto gives the same value to the left and right side */
-  padding: 0 3.2rem;
-  margin: 0 auto;
+/* display the profile name and the background image */
+.section-profile {
+  top: 40rem;
+  margin-bottom: 5rem;
 }
 
 /* profile container holds the name 'profile'. relative to allow name 'profile' to display on top of background image */
 .section-profile-container {
+  display: flex;
   height: 40rem;
   width: 100%vw;
-}
-
-.profile-head {
-  display: flex;
-  justify-content: flex-end;
-  width: 100%;
-  height: 10rem;
+  position: relative;
 }
 
 /* profile header containing name 'profile' made absolute to display on top of background image */
 .profile-heading {
   position: absolute;
+  align-items: right;
   font-size: 4rem;
   text-align: center;
-  background-color: rgb(103, 232, 249);
+  background-color: #67e8f9;
   padding: 2rem;
-  width: 30rem;
-  /* margin-top: -5%; */
-  margin-right: 5rem;
-  top: 43rem;
+  top: 30rem;
+  left: 130rem;
+  width: 45%;
 }
 
 /* name 'profile' displays on this background image */
@@ -122,10 +116,14 @@ p {
 .article-work {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  /* grid-template-rows: repeat(5, 1fr); */
-  grid-template-rows: auto auto auto auto auto;
+  grid-template-rows: repeat(5, 1fr);
   column-gap: 2rem;
   row-gap: 2rem;
+}
+
+/* displays the avatar picture */
+.header-profile-img {
+  position: absolute;
 }
 
 /* section about me with padding and justification right fincluding border rom about me text */
@@ -136,7 +134,7 @@ p {
 }
 
 /* This is the style about me section haeading which is also used for the work and contact headings */
-.sub-heading {
+.about-heading {
   font-size: 6rem;
   text-align: right;
   padding: 0 2rem 0 2rem;
@@ -154,7 +152,6 @@ p {
   grid-column: 2 / span 3;
   grid-row: 1/2;
   align-content: start;
-  justify-self: start;
 }
 
 /* section work done with padding incuding border between background image */
@@ -168,18 +165,27 @@ p {
 /* This is the recent work which is the first image which is the largest. It places the image and text in a specific cell in the grid*/
 .section-recent {
   position: relative;
-  grid-column: 2 / span 3;
+  grid-column: 2 / span end;
   grid-row: 2/3;
   border: 0.5rem solid #67e8f9;
-  width: fit-content;
-  height: fit-content;
 }
 
 /* This is the background image for the recent work section */
 .section-recent-img {
   /* access image directly from css file */
+  background-image: linear-gradient(
+      to right bottom,
+      rgba(103, 232, 249, 0.479),
+      rgba(103, 232, 249, 0.295)
+    ),
+    url("../images/abstract.jpg");
+  /*backgroundimagecoverstheentireelement*/
+  background-size: cover;
+  background-position: center;
+  height: 100%;
   max-width: 100%;
 }
+
 /* This is the text on the background image for the recent work section */
 .section-recent-main-text {
   background-color: #67e8f9;
@@ -187,7 +193,7 @@ p {
   font-size: 3rem;
   font-weight: 500;
   padding: 2rem;
-  top: 80%;
+  top: 70%;
   left: 3rem;
 }
 
@@ -197,14 +203,22 @@ p {
   grid-row: 3/4;
   position: relative;
   border: 0.5rem solid #67e8f9;
-  width: fit-content;
-  height: fit-content;
 }
 
 /* This is the first previous work section background image */
 
 .section-previous-first-img {
   /* access image directly from css file */
+  background-image: linear-gradient(
+      to right bottom,
+      rgba(103, 232, 249, 0.479),
+      rgba(103, 232, 249, 0.295)
+    ),
+    url("../images/bubble.jpg");
+  /*backgroundimagecoverstheentireelement*/
+  background-size: cover;
+  background-position: center;
+  height: 100%;
   max-width: 100%;
 }
 
@@ -215,7 +229,7 @@ p {
   font-size: 3rem;
   font-weight: 500;
   padding: 2rem;
-  top: 85%;
+  top: 70%;
   left: 3rem;
 }
 
@@ -225,13 +239,21 @@ p {
   grid-row: 3/4;
   position: relative;
   border: 0.5rem solid #67e8f9;
-  width: fit-content;
-  height: fit-content;
 }
 
 /* This is the second previous work section background image */
 .section-previous-second-img {
   /* access image directly from css file */
+  background-image: linear-gradient(
+      to right bottom,
+      rgba(103, 232, 249, 0.479),
+      rgba(103, 232, 249, 0.295)
+    ),
+    url("../images/feathers.jpg");
+  /*backgroundimagecoverstheentireelement*/
+  background-size: cover;
+  background-position: center;
+  height: 100%;
   max-width: 100%;
 }
 
@@ -242,23 +264,31 @@ p {
   font-size: 3rem;
   font-weight: 500;
   padding: 2rem;
-  top: 83%;
+  top: 70%;
   left: 3rem;
 }
 
 /* This is the third previous work text on the background image */
 .section-previous-third {
   grid-column: 2/3;
-  grid-row: 4/5;
+  grid-row: 4/4;
   position: relative;
   border: 0.5rem solid #67e8f9;
-  width: fit-content;
-  height: fit-content;
 }
 
 /* This is the third previous work section background image */
 .section-previous-third-img {
   /* access image directly from css file */
+  background-image: linear-gradient(
+      to right bottom,
+      rgba(103, 232, 249, 0.479),
+      rgba(103, 232, 249, 0.295)
+    ),
+    url("../images/country.jpg");
+  /*backgroundimagecoverstheentireelement*/
+  background-size: cover;
+  background-position: center;
+  height: 100%;
   max-width: 100%;
 }
 
@@ -269,23 +299,31 @@ p {
   font-size: 3rem;
   font-weight: 500;
   padding: 2rem;
-  top: 85%;
+  top: 70%;
   left: 3rem;
 }
 
 /* This is the fourth previous work text on the background image */
 .section-previous-fourth {
   grid-column: 3 / end;
-  grid-row: 4/5;
+  grid-row: 4/4;
   position: relative;
   border: 0.5rem solid #67e8f9;
-  width: fit-content;
-  height: fit-content;
 }
 
 /* This is the fourth previous work section background image */
 .section-previous-fourth-img {
   /* access image directly from css file */
+  background-image: linear-gradient(
+      to right bottom,
+      rgba(103, 232, 249, 0.479),
+      rgba(103, 232, 249, 0.295)
+    ),
+    url("../images/sea.jpg");
+  /*backgroundimagecoverstheentireelement*/
+  background-size: cover;
+  background-position: center;
+  height: 100%;
   max-width: 100%;
 }
 
@@ -296,26 +334,21 @@ p {
   font-size: 3rem;
   font-weight: 500;
   padding: 2rem;
-  top: 82%;
+  top: 70%;
   left: 3rem;
 }
 
 /* this is the contact details styling for the unordered list element */
 .section-contact-ul {
-  grid-column: 2 / end;
   background-color: #cffafe;
   /* set padding to zero as it is being inherited from the ul styling above. */
-  font-size: 3rem;
-  margin: 0 auto;
-  margin-top: 5rem;
+  padding: 0rem;
 }
 
 /* This is the display for the lists of the unordered list for the contact section*/
 .section-contact-li {
   display: inline;
   list-style-type: none;
-  line-height: 1.8em;
-  padding: 3rem;
 }
 
 /* This is the main styling for the li lists for the contact section */
@@ -341,14 +374,14 @@ p {
 /* footer links placed into grid row 5 and spans cell 2 to 3 */
 /* this applies to the links in the footer. */
 .footer {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: auto;
+  grid-column: 2 / -1;
+  grid-row: 5/5;
+  margin-top: 7rem;
 }
 
 /* styling for contact section in footer  title*/
 .section-footer-contact {
   border-right: 1rem solid #1b5e81e8;
-  margin-right: 5rem;
+  margin-right: 4rem;
   height: 20rem;
 }
