--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -227,6 +227,7 @@ p {
   border: 0.5rem solid #67e8f9;
   width: fit-content;
   height: fit-content;
+  top: 7%;
 }
 
 /* This is the second previous work section background image */
@@ -254,6 +255,7 @@ p {
   border: 0.5rem solid #67e8f9;
   width: fit-content;
   height: fit-content;
+  top: 1%;
 }
 
 /* This is the third previous work section background image */
