Changed link to recent project to bootcamp project 1 Destination guide. Changed avatar image to my own. Add a top margin to About me section.

--- a/assets/css/queries.css
+++ b/assets/css/queries.css
@@ -42,21 +42,22 @@
     font-size: 2rem;
     padding: 0.2rem;
     left: 2rem;
-    top: 30%;
+    top: 55%;
   }
   /* This is the first previous work text on the background image */
   .section-previous-first-text {
     font-size: 2rem;
     padding: 0.2rem;
     left: 2rem;
-    top: 60%;
+    top: 80%;
   }
 
   /* This is the second  previous work text on the background image */
   .section-previous-second-text {
     font-size: 2rem;
     padding: 0.2rem;
-    top: 20%;
+    margin-right: 15%;
+    top: 70%;
   }
 
   /* This is the third  previous work text on the background image */
@@ -64,14 +65,14 @@
     font-size: 2rem;
     padding: 0.2rem;
     left: 2rem;
-    top: 60%;
+    top: 80%;
   }
 
   /* This is the fourth  previous work text on the background image */
   .section-previous-fourth-text {
     font-size: 2rem;
     padding: 0.2rem;
-    top: 20%;
+    top: 70%;
   }
 }
 
@@ -127,8 +128,8 @@
   .section-recent-main-text {
     font-size: 2rem;
     padding: 0.2rem;
-    left: 2rem;
-    top: 40%;
+    left: 1rem;
+    top: 8%;
   }
 
   /* This is the first previous work text on the background image */
@@ -142,7 +143,7 @@
     font-size: 2rem;
     padding: 0.2rem;
     left: 2rem;
-    top: 70%;
+    top: 78%;
   }
 
   /* This is the second  previous work text on the background image */
@@ -155,7 +156,7 @@
   .section-previous-second-text {
     font-size: 2rem;
     padding: 0.2rem;
-    top: 60%;
+    top: 55%;
   }
 
   /* This is the third  previous work text on the background image */
@@ -169,7 +170,7 @@
     font-size: 2rem;
     padding: 0.2rem;
     left: 2rem;
-    top: 70%;
+    top: 78%;
   }
 
   /* This is the fourth  previous work text on the background image */
@@ -183,7 +184,7 @@
     font-size: 2rem;
     padding: 0.2rem;
     left: 1rem;
-    top: 55%;
+    top: 64%;
   }
   .footer {
     grid-template-columns: auto auto;
